--- a/module-2/Confidence-Intervals/your-code/main.ipynb
+++ b/module-2/Confidence-Intervals/your-code/main.ipynb
@@ -9,11 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Libraries"
+    "# Libraries\n",
+    "import numpy as np\n",
+    "import scipy.stats"
    ]
   },
   {
@@ -32,11 +34,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[172.14308590115726, 174.79024743217607]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "heights = np.array([167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195])\n",
+    "\n",
+    "z_critical = scipy.stats.norm.ppf(0.9)\n",
+    "scale = 4/np.sqrt(len(heights))\n",
+    "margin_of_error = z_critical * scale\n",
+    "[heights.mean() - margin_of_error, heights.mean() + margin_of_error]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(172.14308590115726, 174.79024743217607)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.stats.norm.interval(alpha = 0.8, loc=heights.mean(), scale=scale)"
    ]
   },
   {
@@ -51,11 +90,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.20248138545542083, 0.3118043288302934) (0.1869856177645281, 0.3273000965211861)\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "N = 105\n",
+    "p = 27/N\n",
+    "\n",
+    "sigma = np.sqrt(p*(1-p)/N)\n",
+    "\n",
+    "interval_losses_80 = scipy.stats.norm.interval(alpha = 0.8, loc = p, scale = sigma)\n",
+    "interval_losses_90 = scipy.stats.norm.interval(alpha = 0.9, loc = p, scale = sigma)\n",
+    "\n",
+    "print(interval_losses_80, interval_losses_90)"
    ]
   },
   {
@@ -70,11 +126,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[31.992400675216064, 115.32123613002646]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "df = len(heights) - 1\n",
+    "ci = scipy.stats.chi2.interval(0.9, df) # donne l'intervalle pour Chi2 à DF degrés de libertés avec niveau de confiance à 0,90 : [a, b]\n",
+    "sample_var = np.var(heights, ddof=1) #ddof = 1 est pour une variance empirique non biaisée\n",
+    "conf_int = [ df * sample_var / ci[1], df * sample_var / ci[0]]\n",
+    "conf_int"
    ]
   },
   {
@@ -93,11 +166,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9.757818534642887, 10.242181465357113)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "acid = np.array([9.8, 10.2, 10.4, 9.8, 10.0, 10.2, 9.6])\n",
+    "\n",
+    "scipy.stats.t.interval(alpha = 0.95, loc = acid.mean(), df = len(acid)-1, scale = acid.std() / np.sqrt(len(acid)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9.757818534642887, 10.242181465357113]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_critical = scipy.stats.t.ppf(0.975, df=len(acid)-1)\n",
+    "margin_of_error = t_critical * (acid.std() / np.sqrt(len(acid)))\n",
+    "[acid.mean() - margin_of_error, acid.mean() + margin_of_error]"
    ]
   },
   {
@@ -118,11 +227,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "424.63338246535767"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "heights = np.array([167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195])\n",
+    "sigma = 4\n",
+    "\n",
+    "z = scipy.stats.norm.ppf(.995)\n",
+    "n = z**2 * sigma**2 * 4\n",
+    "\n",
+    "n"
    ]
   },
   {
@@ -163,12 +290,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6.303419026585921, 25.69658097341408]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "\n",
+    "size_s1 = 40\n",
+    "mean_s1 = 418\n",
+    "std_s1 = 26\n",
+    "\n",
+    "size_s2 = 50\n",
+    "mean_s2 = 402\n",
+    "std_s2 = 22\n",
+    "\n",
+    "emp_mean = mean_s1 - mean_s2\n",
+    "emp_std = np.sqrt((std_s1**2)/size_s1 + (std_s2**2)/size_s2)\n",
+    "z_critical = scipy.stats.norm.ppf(0.97)\n",
+    "\n",
+    "margin_of_error = z_critical * emp_std\n",
+    "\n",
+    "ci = [emp_mean - margin_of_error, emp_mean + margin_of_error]\n",
+    "ci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6.303419026585921, 25.69658097341408)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.stats.norm.interval(alpha = 0.94, loc=emp_mean, scale=emp_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -187,9 +369,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
